Edit openining balance in the edit member

--- a/public/view/m-member/edit-members.ejs
+++ b/public/view/m-member/edit-members.ejs
@@ -563,6 +563,16 @@
                               </div>
 
                               <div class="col-xl-6">
+                                <label for="meeting_opening_balance" class="form-label">Meeting Opening Balance</label>
+                                <input
+                                  type="text"
+                                  class="form-control"
+                                  id="meeting_opening_balance"
+                                  name="meeting_opening_balance"
+                                />
+                              </div>
+
+                              <div class="col-xl-6">
                                 <label for="member_status" class="form-label">Member Status</label>
                                 <select class="form-control" name="member_status" id="member_status">
                                   <option value="">Select</option>
