meeting opening balance

--- a/public/view/m-member/add-member.ejs
+++ b/public/view/m-member/add-member.ejs
@@ -579,6 +579,17 @@
                                 />
                               </div>
 
+                              <div class="col-xl-6">
+                                <label for="meeting_opening_balance" class="form-label">Meeting Opening Balance</label>
+                                <input
+                                  type="text"
+                                  class="form-control"
+                                  id="meeting_opening_balance"
+                                  name="meeting_opening_balance"
+                                  placeholder="Any pending amount.."
+                                />
+                              </div>
+
                               <!-- <div class="col-xl-6">
                                 <label for="product-cost-add" class="form-label"
                                   >Last Renewal Date</label
