--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -2,7 +2,7 @@
       <aside class="app-sidebar sticky" id="sidebar">
         <!-- Start::main-sidebar-header -->
         <div class="main-sidebar-header" style="background-color: white">
-          <a href="/" class="header-logo">
+          <a href="#" class="header-logo">
             <img
               src=" assets/images/brand-logos/desktop-logo.png"
               alt="logo"
