--- a/public/view/m-member/member-transactions.ejs
+++ b/public/view/m-member/member-transactions.ejs
@@ -46,10 +46,10 @@
               <nav>
                 <ol class="breadcrumb mb-1">
                   <li class="breadcrumb-item">
-                    <a href="javascript:void(0);">Manage Transactions </a>
+                    <a href="javascript:void(0);">Manage Kitty Transactions </a>
                   </li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    View All Transactions
+                    View All Kitty Transactions
                   </li>
                 </ol>
               </nav>
@@ -86,13 +86,79 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h1 class="mb-2 fs-12 cus">
-                              Total Transactions Amount (in ₹)
+                              Total Kitty Amount (in ₹)
                             </h1>
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
+                                  <span id="total-kitty-amount">0</span>
+                                </h5>
+                              </div>
+                            </div>
+                          </div>                          
+                          <div
+                            class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                          >
+                            <div
+                              class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                            >
+                              <div class="avatar avatar-sm svg-white">
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  width="44"
+                                  height="44"
+                                  viewBox="0 0 24 24"
+                                  stroke-width="1.5"
+                                  stroke="#d01f2f"
+                                  fill="none"
+                                  stroke-linecap="round"
+                                  stroke-linejoin="round"
+                                >
+                                  <path
+                                    stroke="none"
+                                    d="M0 0h24v24H0z"
+                                    fill="none"
+                                  />
+                                  <path
+                                    d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                  />
+                                  <path
+                                    d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                  />
+                                  <rect
+                                    x="3"
+                                    y="8"
+                                    width="18"
+                                    height="8"
+                                    rx="2"
+                                  />
+                                  <circle cx="16.5" cy="12" r="1.5" />
+                                </svg>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xxl-3">
+                    <div
+                      class="card custom-card overflow-hidden main-content-card"
+                    >
+                      <div
+                        class="card-body p-4"
+                        style="background-color: gainsboro"
+                      >
+                        <div class="d-flex align-items-start gap-3">
+                          <div class="flex-fill">
+                            <h6 class="mb-2 fs-12 cus">
+                              Success Kitty Payments (in ₹)
+                            </h6>
+                            <div class="pb-0 mt-0">
+                              <div>
+                                <h5 class="fw-medium mb-1">
                                   <span class="count-up" data-count="385"
-                                    ></span
+                                    >-</span
                                   >
                                 </h5>
                               </div>
@@ -154,81 +220,13 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h6 class="mb-2 fs-12 cus">
-                              Success Payments (in ₹)
+                              Pending Kitty Payments (in ₹)
                             </h6>
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
                                   <span class="count-up" data-count="385"
-                                    ></span
-                                  >
-                                </h5>
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
-                          >
-                            <div
-                              class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
-                            >
-                              <div class="avatar avatar-sm svg-white">
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
-                                  width="44"
-                                  height="44"
-                                  viewBox="0 0 24 24"
-                                  stroke-width="1.5"
-                                  stroke="#d01f2f"
-                                  fill="none"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                                >
-                                  <path
-                                    stroke="none"
-                                    d="M0 0h24v24H0z"
-                                    fill="none"
-                                  />
-                                  <path
-                                    d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
-                                  />
-                                  <path
-                                    d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
-                                  />
-                                  <rect
-                                    x="3"
-                                    y="8"
-                                    width="18"
-                                    height="8"
-                                    rx="2"
-                                  />
-                                  <circle cx="16.5" cy="12" r="1.5" />
-                                </svg>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xxl-3">
-                    <div
-                      class="card custom-card overflow-hidden main-content-card"
-                    >
-                      <div
-                        class="card-body p-4"
-                        style="background-color: gainsboro"
-                      >
-                        <div class="d-flex align-items-start gap-3">
-                          <div class="flex-fill">
-                            <h6 class="mb-2 fs-12 cus">
-                              Pending Payments (in ₹)
-                            </h6>
-                            <div class="pb-0 mt-0">
-                              <div>
-                                <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
-                                    >
+                                    >-
                                     </span
                                   >
                                 </h5>
@@ -287,19 +285,7 @@
           <div class="row" style="margin-bottom: 5px;">
             <div class="col-9"></div>
             <div class="col-3">
-              <div class="custom-form-group">
-                <input
-                  type="text"
-                  id="searchChapterInput"
-                  class="form-control"
-                  placeholder="Search Payment.."
-                  aria-label="Event : custom'id"
-                  aria-describedby="button-addon2"
-                />
-                <a href="javascript:void(0);" class="text-muted custom-form-btn">
-                  <i class="ti ti-search"></i>
-                </a>
-              </div>
+           
               
             </div>
           </div>
@@ -313,91 +299,44 @@
                 >
                   <div class="card-title">All Kitty Transactions</div>
                   <div class="d-flex">
-                    <!-- Region Filter -->
-                    <!-- Month Filter -->
-                    <div class="dropdown me-2">
-                      <a href="javascript:void(0);"
-                         class="btn btn-sm btn-light text-muted dropdown-toggle"
-                         data-bs-toggle="dropdown"
-                         aria-expanded="true">
-                        <i class="ti ti-sort-descending-2 me-1"></i> Month
+
+
+                    <div class="custom-form-group">
+                      <input
+                        type="text"
+                        id="searchChapterInput"
+                        class="form-control"
+                        placeholder="Search Payment.."
+                        aria-label="Event : custom'id"
+                        aria-describedby="button-addon2"
+                      />
+                      <a href="javascript:void(0);" class="text-muted custom-form-btn">
+                        <i class="ti ti-search"></i>
                       </a>
-                      <ul class="dropdown-menu" id="month-filter" role="menu">
-                        <!-- Items will be dynamically inserted here -->
-                      </ul>
                     </div>
-                  
-                    <!-- Payment Type Filter -->
-                    <div class="dropdown me-2">
-                      <a href="javascript:void(0);"
-                         class="btn btn-sm btn-light text-muted dropdown-toggle"
-                         data-bs-toggle="dropdown"
-                         aria-expanded="true">
-                        <i class="ti ti-sort-descending-2 me-1"></i> Payment Type
-                      </a>
-                      <ul class="dropdown-menu" id="payment-type-filter" role="menu">
-                        <!-- Items will be dynamically inserted here -->
-                      </ul>
-                    </div>
-                  
-                  
-                    <!-- Payment Status Filter -->
-                    <div class="dropdown me-2">
-                      <a href="javascript:void(0);"
-                         class="btn btn-sm btn-light text-muted dropdown-toggle"
-                         data-bs-toggle="dropdown"
-                         aria-expanded="true">
-                        <i class="ti ti-sort-descending-2 me-1"></i> PG Status
-                      </a>
-                      <ul class="dropdown-menu" id="payment-status-filter" role="menu">
-                        <!-- Items will be dynamically inserted here -->
-                      </ul>
-                    </div>
-                  
-                    <!-- Payment Method Filter -->
-                    <div class="dropdown me-2">
-                      <a href="javascript:void(0);"
-                         class="btn btn-sm btn-light text-muted dropdown-toggle"
-                         data-bs-toggle="dropdown"
-                         aria-expanded="true">
-                        <i class="ti ti-sort-descending-2 me-1"></i> Method
-                      </a>
-                      <ul class="dropdown-menu" id="payment-method-filter" role="menu">
-                        <!-- Items will be dynamically inserted here -->
-                      </ul>
-                    </div>
-                  
-                    <!-- Apply Filter Button -->
-                    <button href=""
-                            id="apply-filters-btn"
-                            class="btn btn-sm btn-primary btn-wave waves-light">
-                      Apply Filter
-                    </button>
-                    <div style="margin-left: 3px;"><button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
-                      Reset Filter
-                    </button></div>
-                    
-                    
+
                   </div>
                   
                 </div>
                 <div class="card-body p-0">
                   <div class="table-responsive">
-                    <table class="table text-nowrap">
-                      <thead>
-                        <tr>
-                          <th scope="col-5">S.No.</th>
-                          <th scope="col-5">Date</th>
-                          <th scope="col-5">Description</th>
-                          <th scope="col-5">Amount</th>
-                          <th scope="col-5">Balance</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr class="invoice-list">
-                        </tr>
-                      </tbody>
-                    </table>
+                    <div id="ledger-container">
+                      <table class="table text-nowrap" style="border: 0px solid rgba(128, 128, 128, 0.505);">
+                        <thead>
+                          <tr>
+                            <th>S.No.</th>
+                            <th>Date</th>
+                            <th>Description</th>
+                            <th>Amount</th>
+                            <th>Balance</th>
+                          </tr>
+                        </thead>
+                        <tbody id="ledger-body">
+                          <!-- Rows will be dynamically added here -->
+                        </tbody>
+                      </table>
+                    </div>
+                    
                   </div>
                 </div>
                 <div class="card-footer border-top-0">
