--- a/public/view/m-expense/add-expense.ejs
+++ b/public/view/m-expense/add-expense.ejs
@@ -105,10 +105,21 @@
                           <div class="row gy-3">
                             <div class="col-xl-12">
                               <label for="product-cost-add" class="form-label">
+                             
                                 <span style="font-size: 15px">
                                   <b>It's time to add a new expense!</b>
                                 </span>
+                             
                               </label>
+                              <button
+                              class="btn btn-danger border"
+                              type="button"
+                              id="addNewExpenseBtn"
+                              data-region-id="123" 
+                              style="float: right"
+                            >
+                              + Add New Expense
+                            </button> 
                             </div>
 
                             <div class="col-xl-6">
@@ -247,5 +258,7 @@
   });
 });
       </script>
+      <script src="../../assets/js/region.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
     <%- include('../partials/footer') %>
