--- a/public/view/m-expense/add-expense.ejs
+++ b/public/view/m-expense/add-expense.ejs
@@ -258,7 +258,7 @@
   });
 });
       </script>
-      <script src="../../assets/js/region.js"></script>
+      <script src="../../assets/js/expense.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
     <%- include('../partials/footer') %>
