--- a/public/view/m-expense/manage-expense.ejs
+++ b/public/view/m-expense/manage-expense.ejs
@@ -144,7 +144,8 @@
       </div>
       <!-- End::content  -->
 
-      <script src="../../assets/js/region.js"></script>
+      <script src="../../assets/js/expense.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       <%- include('../partials/footer') %> 
+  
