--- a/public/view/m-expense/add-expense.ejs
+++ b/public/view/m-expense/add-expense.ejs
@@ -88,25 +88,25 @@
 
                         <div class="col-xl-6">
                           <label for="expense_type" class="form-label">Type of Expense</label>
-                          <select class="form-control" name="expense_type" id="expense_type">
+                          <select class="form-control" name="expense_type" id="expense_type" required>
                             <option value="">Loading...</option>
                           </select>
                         </div>
                         <div class="col-xl-6">
                           <label for="submitted_by" class="form-label">Submitted By:</label>
-                          <input type="text" class="form-control" id="submitted_by" name="submitted_by" placeholder="Enter Name" maxlength="50" />
+                          <input type="text" class="form-control" id="submitted_by" name="submitted_by" placeholder="Enter Name" maxlength="50" required />
                         </div>
 
                         <div class="col-xl-6">
                           <label for="description" class="form-label">Description</label>
-                          <textarea class="form-control" id="description" name="description" placeholder="Enter description" rows="3" maxlength="200"></textarea>
+                          <textarea class="form-control" id="description" name="description" placeholder="Enter description" rows="3" maxlength="200" required></textarea>
                         </div>
 
                         <div id="membershipFeesContainer" class="container">
                           <div class="row">
                             <div class="col-xl-4 col-md-4">
                               <label class="form-label" for="amount">Amount</label>
-                              <input type="text" class="form-control" id="amount" name="amount" placeholder="Enter Amount" maxlength="10" />
+                              <input type="number" class="form-control" id="amount" name="amount" placeholder="Enter Amount" maxlength="10" required />
                             </div>
 
                             <div class="col-xl-4 col-md-4">
@@ -120,22 +120,22 @@
 
                             <div class="col-xl-4 col-md-4">
                               <label for="bill_date" class="form-label">Bill Date:</label>
-                              <input type="date" id="bill_date" name="bill_date" class="form-control" />
+                              <input type="date" id="bill_date" name="bill_date" class="form-control" required />
                             </div>
                           </div>
 
                           <div class="row">
                             <div class="col-xl-4">
                               <label for="upload_bill" class="form-label">Upload Bill</label>
-                              <input type="file" class="form-control" id="upload_bill" name="upload_bill" />
+                              <input type="file" class="form-control" id="upload_bill" name="upload_bill" required />
                             </div>
                             <div class="col-xl-4">
                               <label for="bill_no" class="form-label">Bill No.</label>
-                              <input type="text" class="form-control" id="bill_no" name="bill_no" placeholder="Enter Bill No." maxlength="20"/>
+                              <input type="text" class="form-control" id="bill_no" name="bill_no" placeholder="Enter Bill No." maxlength="20" required/>
                             </div>
                             <div class="col-xl-4">
                               <label for="transaction_no" class="form-label">Transaction No.</label>
-                              <input type="text" class="form-control" id="transaction_no" name="transaction_no" placeholder="Enter Transaction No" maxlength="20" />
+                              <input type="text" class="form-control" id="transaction_no" name="transaction_no" placeholder="Enter Transaction No" maxlength="20" required />
                             </div>
                           </div>
                         </br>
