--- a/public/view/m-expense/add-expense.ejs
+++ b/public/view/m-expense/add-expense.ejs
@@ -198,7 +198,7 @@ document.addEventListener("DOMContentLoaded", async function () {
       showLoader(); // Assuming you have a function to show a loader
 
       // Send POST request with form data
-      const response = await fetch("http://localhost:5000/api/addExpense", {
+      const response = await fetch("https://bni-data-backend.onrender.com/api/addExpense", {
         method: "POST",
         body: formData, // Pass FormData directly
       });
