Set member ledger - color formatting

--- a/public/view/m-member/member-transactions.ejs
+++ b/public/view/m-member/member-transactions.ejs
@@ -57,7 +57,7 @@
                
               </h1>
             </div>
-            <div class="btn-list">
+            <!-- <div class="btn-list">
 
             <a href="https://bni-data-backend.onrender.com/api/export-transactions"><button
               class="btn btn-primary btn-wave me-0"
@@ -68,7 +68,7 @@
             </button></a>  
 
           
-            </div>
+            </div> -->
           </div>
           <!-- End::page-header -->
           <div class="col-xl-12">
@@ -327,7 +327,8 @@
                             <th>S.No.</th>
                             <th>Date</th>
                             <th>Description</th>
-                            <th>Amount</th>
+                            <th>Debit <b>(Dr.)</b></th>
+                            <th>Credit <b>(Cr.)</b></th>
                             <th>Balance</th>
                           </tr>
                         </thead>
@@ -335,6 +336,7 @@
                           <!-- Rows will be dynamically added here -->
                         </tbody>
                       </table>
+                      
                     </div>
                     
                   </div>
