Member ledger - total kitty amount, success kitty amount and pending kitty payment fetched dynamically

--- a/public/view/m-member/member-transactions.ejs
+++ b/public/view/m-member/member-transactions.ejs
@@ -157,7 +157,7 @@
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
+                                  <span class="count-up" id="success_kitty_amount"
                                     >-</span
                                   >
                                 </h5>
@@ -225,7 +225,7 @@
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
+                                  <span class="count-up" id="pending_payment_amount"
                                     >-
                                     </span
                                   >
