Set member transactions table with adjusted table fields

--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -109,7 +109,7 @@
               <!-- End::slide -->
 
               <li class="slide">
-                <a href="/" class="side-menu__item transactions-menu">
+                <a href="/m/member-allTransactions" class="side-menu__item transactions-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -215,6 +215,7 @@
   const menuMapping = {
     "/d/member-dashboard": ".dashboard-menu",
     "/m/member-transactions": ".transaction-menu",
+    "/m/member-allTransactions": ".transaction-menu",
   };
 
   // Mark the active menu and open its dropdown
