Member All Transactions done fetching

--- a/public/view/m-member/member-Alltransactions.ejs
+++ b/public/view/m-member/member-Alltransactions.ejs
@@ -392,26 +392,25 @@
                 <div class="card-body p-0">
                   <div class="table-responsive">
                     <table class="table text-nowrap">
-                      <thead>
-                        <tr>
-                          <th scope="col">S.No.</th>
-                          <th scope="col">Date</th>
-                          <th scope="col">Amount</th>
-                          <th scope="col">Payment Method</th>
-                          <th scope="col">Order ID</th>
-                          <th scope="col">Transaction ID</th>
-                          <th scope="col">PG Status</th>
-                          <th scope="col">Payment Type</th>
-                          <th scope="col">Settlement Status</th>
-                          <th scope="col">IRN</th>
-                          <th scope="col">QR Code</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr class="invoice-list">
-                        </tr>
-                      </tbody>
-                    </table>
+                        <thead>
+                          <tr>
+                            <th scope="col">S.No.</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Payment Method</th>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Transaction ID</th>
+                            <th scope="col">PG Status</th>
+                            <th scope="col">Payment Type</th>
+                          </tr>
+                        </thead>
+                        <tbody class="member-all-transactions">
+                          <tr>
+                            <!-- Transaction rows will be dynamically added here -->
+                          </tr>
+                        </tbody>
+                      </table>
+                      
                   </div>
                 </div>
                 <div class="card-footer border-top-0">
