Configuration for total transactions amount, success payments and pending payments done in the transactions table in member dashboard

--- a/public/view/m-member/member-Alltransactions.ejs
+++ b/public/view/m-member/member-Alltransactions.ejs
@@ -91,7 +91,7 @@
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
+                                  <span class="count-up" id="total_transactions_amount"
                                     ></span
                                   >
                                 </h5>
@@ -159,7 +159,7 @@
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
+                                  <span class="count-up" id="success_payments"
                                     ></span
                                   >
                                 </h5>
@@ -227,12 +227,8 @@
                             <div class="pb-0 mt-0">
                               <div>
                                 <h5 class="fw-medium mb-1">
-                                  <span class="count-up" data-count="385"
+                                  <span class="count-up" id="pending_payments"
                                     >
-                                    
-
-
-
 
                                     </span
                                   >
