--- a/public/view/m-member/member-transactions.ejs
+++ b/public/view/m-member/member-transactions.ejs
@@ -86,7 +86,7 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h1 class="mb-2 fs-12 cus">
-                              Total Kitty Amount (in ₹)
+                              Total Kitty Amount Raised (in ₹)
                             </h1>
                             <div class="pb-0 mt-0">
                               <div>
@@ -152,7 +152,7 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h6 class="mb-2 fs-12 cus">
-                              Success Kitty Payments (in ₹)
+                              Total Paid Kitty Amount (in ₹)
                             </h6>
                             <div class="pb-0 mt-0">
                               <div>
@@ -220,7 +220,7 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h6 class="mb-2 fs-12 cus">
-                              Pending Kitty Payments (in ₹)
+                              Pending Kitty Amount (in ₹)
                             </h6>
                             <div class="pb-0 mt-0">
                               <div>
