--- a/public/view/partials/chapter-sidebar.ejs
+++ b/public/view/partials/chapter-sidebar.ejs
@@ -106,7 +106,7 @@
                     ></path>
                   </svg>
                   <span class="side-menu__label"
-                    >Manage Expanses
+                    >Manage Expenses
                     </span
                   >
                   <i class="ri-arrow-down-s-line side-menu__angle"></i>
@@ -126,6 +126,41 @@
               </li>
               <!-- End::slide -->
 
+              <!-- Start::slide - Tab 1 Manage Expenses -->
+             
+              <!-- End::slide - Tab 1 -->
+
+              <!-- Start::slide - Tab 2 Manage Expense Types -->
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item expense-type-menu">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
+                    ></path>
+                  </svg>
+                  <span class="side-menu__label">Manage <br/> Expense Types</span>
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/exp/manage-expense-types" class="side-menu__item">View Expense Types</a>
+                  </li>
+                  <li class="slide">
+                    <a href="/exp/add-expense-type" class="side-menu__item">Add Expense Type</a>
+                  </li>
+                </ul>
+              </li>
+              <!-- End::slide - Tab 2 -->
+
             <div class="slide-right" id="slide-right">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -139,6 +174,8 @@
                 ></path>
               </svg>
             </div>
+
+            
           </nav>
           <!-- End::nav -->
         </div>
