Training page add

--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -129,7 +129,7 @@
               </li>
 
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item universal-menu">
+                <a href="javascript:void(0);" class="side-menu__item training-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -151,12 +151,12 @@
                 </a>
                 <ul class="slide-menu child1">
                   <li class="slide">
-                    <a href="#" class="side-menu__item"
+                    <a href="/mtr/all-trainings" class="side-menu__item"
                       >All Trainings</a
                     >
                   </li>
                   <li class="slide">
-                    <a href="#" class="side-menu__item"
+                    <a href="/mtr/my-training" class="side-menu__item"
                       >My Trainings</a
                     >
                   </li>
@@ -322,6 +322,8 @@
     "/d/member-dashboard": ".dashboard-menu",
     "/m/member-transactions": ".transaction-menu",
     "/m/member-allTransactions": ".transaction-menu",
+    "/mtr/all-trainings": ".training-menu",
+    "/mtr/my-training": ".training-menu",
   };
 
   // Mark the active menu and open its dropdown
