--- a/public/view/m-member-accolade/manage-member-accolades.ejs
+++ b/public/view/m-member-accolade/manage-member-accolades.ejs
@@ -4,7 +4,7 @@
 
     <!-- sidebar -->
 
-    <%- include('../partials/sidebar') %>
+    <%- include('../partials/member-sidebar') %>
     <div id="loader">
       <img src="../../assets/images/media/loader.svg" alt="" />
     </div>
