--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -164,7 +164,7 @@
               </li>
 
 
-              <li class="slide has-sub">
+              <!-- <li class="slide has-sub">
                 <a href="javascript:void(0);" class="side-menu__item universal-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -197,7 +197,7 @@
                     >
                   </li>
                 </ul>
-              </li>
+              </li> -->
 
               <li class="slide has-sub">
                 <a href="javascript:void(0);" class="side-menu__item universal-menu">
@@ -222,12 +222,12 @@
                 </a>
                 <ul class="slide-menu child1">
                   <li class="slide">
-                    <a href="#" class="side-menu__item"
+                    <a href="/macc/manage-memberAccolades" class="side-menu__item"
                       >View All Accolades</a
                     >
                   </li>
                   <li class="slide">
-                    <a href="#" class="side-menu__item"
+                    <a href="/macc/request-memberAccolades" class="side-menu__item"
                       >Request a Accolade</a
                     >
                   </li>
