--- a/public/view/m-memberTraining/manage-memberTrainings.ejs
+++ b/public/view/m-memberTraining/manage-memberTrainings.ejs
@@ -38,10 +38,10 @@
                 Total Listed Tranings <br />
                 <span> <b>10</b></span>
               </button>
-              
+<!--               
               <button class="btn btn-danger btn-wave me-0">
                 <i class="ri-share-forward-line me-1"></i> Export List
-              </button>
+              </button> -->
             </div>
           </div>
           <!-- Page Header Close -->
@@ -63,17 +63,7 @@
                       <!-- Items will be dynamically inserted here -->
                     </ul>
                   </div>
-                  <div class="dropdown me-2">
-                    <a href="javascript:void(0);"
-                       class="btn btn-sm btn-light text-muted dropdown-toggle"
-                       data-bs-toggle="dropdown"
-                       aria-expanded="true">
-                      <i class="ti ti-sort-descending-2 me-1"></i> Month
-                    </a>
-                    <ul class="dropdown-menu" id="month-filter" role="menu">
-                      <!-- Items will be dynamically inserted here -->
-                    </ul>
-                  </div>
+             
                   <button href=""
                   id="apply-filters-btn"
                   class="btn btn-sm btn-primary btn-wave waves-light">
@@ -82,12 +72,12 @@
           <div style="margin-left: 3px;"><button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
             Reset Filter
           </button></div>
-                  <a href="/tr/add-training"><button
+                  <!-- <a href="/tr/add-training"><button
                     class="btn btn-outline-light border"
                     type="button"
                   >
                     + Add New Training
-                  </button></a> 
+                  </button></a>  -->
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
@@ -119,10 +109,9 @@
                       <th scope="col">Training Name</th>
                       <th scope="col">Training Venue</th>
                       <th scope="col">Training Date</th>
-                      <th scope="col">No. of Registrations</th>
                       <th scope="col">Venue Fee</th>
                       <th scope="col">Training Status</th>
-                      <th scope="col">Actions</th>
+                      <th scope="col">Registrations</th>
                     </tr>
                   </thead>
                   
@@ -158,7 +147,7 @@
       </div>
       <!-- End::content  -->
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-      <script src="../../assets/js/trainings.js"></script>
+      <script src="../../assets/js/memberTraining.js"></script>
       
 
       <%- include('../partials/footer') %> 
