Selected set for accolades one

--- a/public/view/m-settings/userSettings.ejs
+++ b/public/view/m-settings/userSettings.ejs
@@ -4,7 +4,7 @@
 
 <!-- sidebar -->
 
-<%- include('../partials/sidebar') %>
+<%- include('../partials/member-sidebar') %>
 
 <!-- Start::app-content -->
 <div class="main-content app-content">
