--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -200,7 +200,7 @@
               </li> -->
 
               <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item universal-menu">
+                <a href="javascript:void(0);" class="side-menu__item accolades-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -243,7 +243,7 @@
 
               <!-- Start::slide -->
               <li class="slide">
-                <a href="#" class="side-menu__item">
+                <a href="/s/member-settings" class="side-menu__item">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -323,7 +323,8 @@
     "/m/member-transactions": ".transaction-menu",
     "/m/member-allTransactions": ".transaction-menu",
     "/mtr/all-trainings": ".training-menu",
-    "/mtr/my-training": ".training-menu",
+    "/macc/manage-memberAccolades": ".accolades-menu",
+    "/macc/request-memberAccolades": ".accolades-menu",
   };
 
   // Mark the active menu and open its dropdown
