--- a/public/view/m-memberTraining/view-memberTraining.ejs
+++ b/public/view/m-memberTraining/view-memberTraining.ejs
@@ -194,18 +194,13 @@
                             <div class="d-flex align-items-start gap-3">
                               <div class="flex-fill">
                                 <h6 class="mb-2 fs-12 cus">
-                                  Pending Payments (in ₹)
+                                  Upcoming Trainings
                                 </h6>
                                 <div class="pb-0 mt-0">
                                   <div>
                                     <h5 class="fw-medium mb-1">
                                       <span class="count-up" data-count="385"
-                                        >
-                                        
-    
-    
-    
-    
+                                        >15
                                         </span
                                       >
                                     </h5>
